# scaffold-agent-harness

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  app.py  pyproject.toml
docs/: architecture.md  lessons.md  tool-design.md
evals/: __init__.py  runner.py
evals/cases/: fs_advanced.yaml  fs_basic.yaml  fs_context.yaml  fs_doc_org.yaml  fs_security.yaml  fs_tool_select.yaml
evals/judges/: llm_judge.py  prompts.py
fs_agent/: __init__.py  agent.py  app.py  cli.py
fs_agent/policies/: __init__.py  permissions.py
fs_agent/skills/batch-compare/: SKILL.md
fs_agent/skills/doc-qa/: SKILL.md
fs_agent/skills/file-organize/: SKILL.md
fs_agent/tools/: __init__.py  _chroma.py  advanced_tools.py  doc_tools.py  file_tools.py  mcp_tools.py  reference_tools.py  search_tools.py  skill_tools.py
scaffold/: __init__.py
scaffold/cache/: __init__.py  cache.py
scaffold/context/: __init__.py  budget.py  compression.py  window.py
scaffold/loop/: __init__.py  checkpoint.py  middleware.py  react.py
scaffold/loop/middlewares/: __init__.py  cost_tracker_middleware.py  redaction_middleware.py  skill_trigger_middleware.py  tool_call_limit_middleware.py
scaffold/models/: __init__.py  base.py  mock.py  openai_compat.py
scaffold/observability/: __init__.py  storage.py  tracer.py  ui.py
scaffold/prompts/: __init__.py  loader.py
scaffold/prompts/compression/: summary_naive_system.j2  summary_naive_user.j2
scaffold/safety/: __init__.py  injection.py  redaction.py  sandbox.py
scaffold/skills/: __init__.py  loader.py
scaffold/tools/: __init__.py  errors.py  registry.py  schema.py
scripts/: smoke_test.py
tests/: test_advanced_tools.py  test_cache.py  test_checkpoint.py  test_context.py  test_doc_tools.py  test_dynamic_prompt.py  test_eval.py  test_loop.py  test_middleware.py  test_models.py  test_observability.py  test_permissions.py  test_safety.py  test_search_tools.py  test_skills.py  test_tools.py
(+4 files in other folders)
