[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold"
version = "0.1.0"
description = "A general-purpose Agent Harness framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx>=0.25",
    "tenacity>=8.2",
    "pydantic>=2.0",
    "tiktoken>=0.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
fs = [
    "markitdown[pdf,docx]>=0.0.1",
    "chardet>=5.0",
]
eval = [
    "tabulate>=0.9",
]
mcp = [
    "mcp>=1.0",
]
ui = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
fs-agent = "fs_agent.cli:main"

[tool.setuptools.packages.find]
include = ["scaffold*", "fs_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
